# fastapi-async-mongodb

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  pyproject.toml  run_api_tests.sh
app/: config.py  main.py
app/db/: __init__.py  database_manager.py  models.py  mongo_manager.py
app/rest/: posts.py
tavern_tests/: common.yaml  test_posts.tavern.yaml
